<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/layout">
        <ImageView
            android:id="@+id/icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="5dp" />
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            android:padding="2dp"
            android:fontFamily="sans-serif"
            android:textSize="18sp"
            android:textColor="@color/dayText"
            android:layout_toEndOf="@+id/icon"/>
        <TextView
            android:id="@+id/summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_toEndOf="@+id/icon"
            android:fontFamily="sans-serif"
            android:padding="2dp"
            android:textSize="18sp"
            android:textColor="@color/dayText"
            android:layout_below="@+id/date"/>
        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/windSpeed"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:padding="2dp"
            android:layout_toEndOf="@+id/icon"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            android:textColor="@color/dayText"
            android:layout_below="@+id/summary"/>
        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:padding="2dp"
            android:layout_toEndOf="@+id/wind"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            android:textColor="@color/dayText"
            android:layout_below="@+id/summary"/>
        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:padding="2dp"
            android:layout_toEndOf="@+id/pressure"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            android:textColor="@color/dayText"
            android:layout_below="@+id/summary"/>
        <TextView
            android:id="@+id/low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            android:layout_marginTop="5dp"
            android:padding="2dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            android:textColor="@color/dayText" />
        <TextView
            android:id="@+id/high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            android:layout_marginTop="5dp"
            android:padding="2dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            android:textColor="@color/dayText"
            android:layout_below="@+id/low"/>
    </RelativeLayout>
</LinearLayout>